app/assets/stylesheets/application.scss
$fa-font-path: "font-awesome";

@import "font-awesome";

$link-decoration: none;
$link-hover-decoration: none;

@import "bootstrap";

$gray-1: #25262a;
$gray-2: #5c626e;
$gray-3: #c4c7ce;
$gray-4: #edf0f5;
$red:    #fe331b;

/* Base */
@import "site-base";
/* Blocks */
@import "site-blocks";


a {
  color: $gray-1;
  text-decoration: none;
}

a:hover {
  color: $gray-2;
  font-weight: bold;
  text-decoration: none;
}

#top-alert {
  position: fixed;
  top: 0;
  z-index: 99999;
}

.subscribe-buttons {
  padding-bottom: 20px;
}

.subscribe-buttons .btn {
  margin-left: 5px;
  margin-bottom: 5px
}

.show-notes {
  li {
    margin-bottom: 20px;
  }

  img {
    display: block;
    width: 100%;
    height: auto;

    @include media-breakpoint-up(md) {
      width: 50%;
    }
  }

  a {
    color: rgb(0, 0, 255);
  }

  a::after {
    font-family: "Font Awesome 6 Free";
    font-weight: 900;
    content: "  \f35d  ";
  }

  a:hover {
    font-weight: bold;
  }
}

.inline-podcast {
  background-color: rgba(0, 0, 0, 0.4);
}

audio {
  width: 100%;
  height: 50px;
}

.player iframe {
  width: 100%;
  border: none;
}

.player *:focus-visible {
  outline: 2px solid #5c626e;
  outline-offset: 2px;
}

.episode-header {
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  margin-right: -15px;
  margin-left: -15px;
  margin-bottom: -10px;
}


table.statistics a {
  color: $gray-4;
}

